# lab4

./: .gitignore  CMakeLists.txt  README.md  bad_test.json  bench_results_windows.csv  ca_cert.pem  ext.cnf  leaf_key.pem  other_cert.pem
attacks/length_extension/: attack_output.txt
attacks/md5_collision/: collision_program1.cpp  collision_program2.cpp
bench/: bench_hash.cpp  plot_compare_os.py  plot_results.py
certs_test/: ca_cert.srl  ca_ext.cnf  ca_key.pem  leaf.csr  leaf_cert.pem  other_key.pem  test_cert.pem  test_key.pem
docs/benchmark/: bench_results.csv
src/: cert_parser.cpp  cert_parser.h  certtool_main.cpp  hash_engine.cpp  hash_engine.h  kat_runner.cpp  kat_runner.h  main.cpp
tests/: test_hashtool.cpp
vectors/: sha256_kat.json
